--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
-    <script src="/assets/script/main.js"></script>
+    <script src="./assets/script/main.js"></script>
   </body>
 </html>
